Closed Bug 1901160 Opened 5 months ago Closed 5 months ago

Incorrect level being set for kDefaultProfileLevelId

Categories

(Core :: WebRTC: Audio/Video, defect, P3)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox128 --- fixed
firefox129 --- fixed

People

(Reporter: dbaker, Assigned: dbaker)

References

Details

Attachments

(1 file)

Currently if we receive an SDP for H264 without a profile-level-id attribute the profile-level-id will be set to 0x420010 this is for baseline with no constraints at a level 1.6 (not valid level). When no profile-level-id we need to set level to 1.0 the correct profile-level-id should be then 0x420000A.

Summary: Incorrect level being set in kDefaultProfileLevelId → Incorrect level being set for kDefaultProfileLevelId
Pushed by dbaker@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e8fb72129224 Correcting level applied to kDefaultProfileLevelId for H264.;r=bwc
See Also: → 1901752
Status: NEW → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch

Comment on attachment 9406200 [details]
Bug 1901160 - Correcting level applied to kDefaultProfileLevelId for H264.;r?bwc

Beta/Release Uplift Approval Request

  • User impact if declined: Crash in rare situations where H264 is used and there is no profile-level-id signaled.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We are simply correcting the default profile-level-id that we would apply if one is not signaled from 0x420010 to 0x42000A. Additionally testing was added to better test this default profile-level-id.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9406200 - Flags: approval-mozilla-beta?

Comment on attachment 9406200 [details]
Bug 1901160 - Correcting level applied to kDefaultProfileLevelId for H264.;r?bwc

Approved for 128.0b4.

Attachment #9406200 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: in-testsuite+
Blocks: 1901752
See Also: 1901752
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: