Bug 1901160 - Correcting level applied to kDefaultProfileLevelId for H264. r=bwc, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D212976